tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-raw-slice-constructor.wyst
module legacy_raw_slice

fn bad(base: @u8) -> []u8 {
    return []u8{data = base, len = 4}
}
